--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ignore large images or assets
+/public/images/*
+!/public/images/*.webp
+!/public/images/*.jpg
+
+# ignore just one large image
+/public/images/your_large_image.jpg
